# opentelemetry-metrics-demo

opentelemetry-metrics-go-demo/: README.md  go.mod  go.sum  main.go  metric.go
opentelemetry-metrics-go-demo/middleware/otelmetric/: opentelemetry-meter.go
opentelemetry-metrics-rust-demo/: Cargo.toml  README.md
opentelemetry-metrics-rust-demo/src/: main.rs  state.rs
opentelemetry-metrics-rust-demo/src/middleware/: metrics.rs
