[package]
name = "opentelemetry-metrics-rust-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum.git", branch = "main" }
axum-macros = { git = "https://github.com/tokio-rs/axum.git", branch = "main" }

opentelemetry = { version = "0.17.0", features = ["serialize", "metrics", "rt-tokio"] }
opentelemetry-prometheus = { version = "0.10.0", features = ["prometheus-encoding"] }
prometheus = "0.13.1"
rand = "0.8.5"

tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
